--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -24,7 +24,7 @@
             </div>
 
             <div id="menu_div">
-                <button id="menu_btn" onclick="clicked_menu()">|||</button>
+                <div> <button id="menu_btn" onclick="clicked_menu()">|||</button> </div>
             </div>
         </div>
 
