--- a/Pages/accSettings.html
+++ b/Pages/accSettings.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>General Account Settings</title>
-    <link rel="stylesheet" href="../Styles/accSettings.css">
-    <script src="/Scripts/accSettings.js"></script>
+    <link rel="stylesheet" href="../Styles/main.css">
 </head>
 <body>
 
@@ -65,6 +64,6 @@
     </div>
 </div>
 
-<script src="script.js"></script>
+<script src="/Scripts/accSettings.js"></script>
 </body>
 </html>
