--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="../Styles/dashboard.css">
-    <script src="/Scripts/dashboard.js"></script>
+    <link rel="stylesheet" href="../Styles/main.css">
+    <script src="../Scripts/dashboard.js"></script>
 </head>
 
 <body>
@@ -17,10 +17,10 @@
 
             <div class="logo-nav">
                 <div class="logo-nav-logo">
-                    <img class="menu-options-home-dashboard-icon-img" src="/Images/safe-forest.png">
+                    <img class="menu-options-home-dashboard-icon-img" src="../Images/safe-forest.png">
                 </div>
                 <div class="logo-nav-hamburguer">
-                    <img id="logo-nav-hamburger-btn" onclick="clicked_menu()" src="/Images/hamburger-logo.png"></button>
+                    <img id="logo-nav-hamburger-btn" onclick="clicked_menu()" src="../Images/hamburger-logo.png"></button>
                 </div>
             </div>
 
@@ -31,7 +31,7 @@
                     </div>
                     <div class="menu-options-home-dashboard">
                         <div class="menu-options-home-dashboard-icon">
-                             <img src="/Images/dashboard-logo.png"> 
+                             <img src="../Images/dashboard-logo.png"> 
                         </div>
                         <div class="menu-options-home-dashboard-text">
                             <p>Dashboard</p>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="menu-options-home-camera">
                         <div class="menu-options-home-camera-icon">
-                            <img src="/Images/camera-logo.png">
+                            <img src="../Images/camera-logo.png">
                         </div>
                         <div class="menu-options-home-camera-text">
                             <p>My Cameras</p>
@@ -53,7 +53,7 @@
                     </div>
                     <div class="menu-options-settings-general">
                         <div class="menu-options-settings-general-icon">
-                            <img src="/Images/general-logo.png">
+                            <img src="../Images/general-logo.png">
                         </div>
                         <div class="menu-options-settings-general-text">
                             <p>General</p>
@@ -61,7 +61,7 @@
                     </div>
                     <div class="menu-options-settings-security">
                         <div class="menu-options-settings-security-icon">
-                            <img src="/Images/security-logo.png">
+                            <img src="../Images/security-logo.png">
                         </div>
                         <div class="menu-options-settings-security-text">
                             <p>Security</p>
@@ -69,7 +69,7 @@
                     </div>
                     <div class="menu-options-settings-alert">
                         <div class="menu-options-settings-alert-icon">
-                            <img src="/Images/alert-logo.png">
+                            <img src="../Images/alert-logo.png">
                         </div>
                         <div class="menu-options-settings-alert-text">
                             <p>Alert Contacts</p>
@@ -80,16 +80,16 @@
 
             <div class="social-network">
                 <div class="social-network-image">
-                    <img src="/Images/social-logo.png">
+                    <img src="../Images/social-logo.png">
                 </div>
                 <div class="social-network-image">
-                    <img src="/Images/social-logo.png">
+                    <img src="../Images/social-logo.png">
                 </div>
                 <div class="social-network-image">
-                    <img src="/Images/social-logo.png">
+                    <img src="../Images/social-logo.png">
                 </div>
                 <div class="social-network-image">
-                    <img src="/Images/social-logo.png">
+                    <img src="../Images/social-logo.png">
                 </div>
             </div>
         </div>
@@ -99,30 +99,28 @@
                 <div class="header-greeting">
                     <div class="header-greeting-top">
                         <div class="header-greeting-top-label">
-                            <p>Good Morning, Paul Stuart</p>
+                            <h1>Good night, Paul Stuart</h1>
                         </div>
                     </div>
                     <div class="header-greeting-bottom">
                         <div class="header-greeting-bottom-label">
-                            <p>You are currently using 0 of your 2 cameras</p>
+                            <p>You are currently using 0 of your 0 cameras</p>
                         </div>
                     </div>
                 </div>
                 <div class="header-options">
-                    <div class="header-options-add-camera">
-                        <p>Add Camera</p>
+                    <div class="header-options-addcamera">
+                        <button>Add Camera</button>
                     </div>
                     <div class="header-options-language">
-                        <img src="/Images/language-logo.png">
+                        <img src="../Images/language-logo.png">
                     </div>
                     <div class="header-options-notifications">
-                        <img src="/Images/notification-logo.png">
+                        <img src="../Images/notification-logo.png">
                     </div>
                     <div class="header-options-leave">
                         <p>Leave</p>
-                    </div>
-                    <div class="header-options-logout">
-                        <img src="/Images/logout-logo.png">
+                        <img src="../Images/logout-logo.png">
                     </div>
                 </div>
             </div>
@@ -252,7 +250,7 @@
                 <div class="footer-update">
                     <div class="footer-update-left">
                         <div class="footer-update-left-logo">
-                            <img src="/Images/tick-logo.png">
+                            <img src="../Images/tick-logo.png">
                         </div>
                         <div class="footer-update-left-label">
                             something updated
@@ -260,7 +258,7 @@
                     </div>
                     <div class="footer-update-right">
                         <div class="footer-update-right-logo">
-                            <img src="/Images/tick-logo.png">
+                            <img src="../Images/tick-logo.png">
                         </div>
                         <div class="footer-update-right-label">
                             camera updated
