--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -12,7 +12,6 @@
 
 <body>
     <div class="main">
-
         <div class="side-nav">
 
             <div class="logo-nav">
@@ -80,9 +79,6 @@
             </div>
 
             <div class="social-network">
-                <div class="social-network-image">
-                    <img src="../Images/social-logo.png">
-                </div>
                 <div class="social-network-image">
                     <img src="../Images/social-logo.png">
                 </div>
@@ -240,7 +236,7 @@
             <div class="footer">
                 <div class="footer-info">
                     <div class="footer-info-top">
-                        <p>@Leitek | UAL - Academic Project</p>
+                        <p>Leitek | UAL @ Academic Project</p>
                     </div>
                     <div class="footer-info-bottom">
                         <p>Gonçalo Vidal | João Paulo | Duarte Rodrigues | João Calisto</p>
