--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -96,7 +96,7 @@
                 <div class="header-greeting">
                     <div class="header-greeting-top">
                         <div class="header-greeting-top-label">
-                            <h1>Good night, Paul Stuart</h1>
+                            <h2>Good night, Paul Stuart</h2>
                         </div>
                     </div>
                     <div class="header-greeting-bottom">
@@ -198,30 +198,58 @@
                             <table class="camera-table">
                                 <thead>
                                     <tr>
-                                        <th>Camera name</th>
-                                        <th>Last detected date</th>
+                                        <th>Camera</th>
+                                        <th>Last Detected</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>Canon EOS 5D Mark IV</td>
-                                        <td>2024-04-10</td>
+                                        <td>CamX-2000</td>
+                                        <td>2024-04-15 08:45:12</td>
                                     </tr>
                                     <tr>
-                                        <td>Canon EOS 5D Mark IV</td>
-                                        <td>2024-04-10</td>
+                                        <td>CamX-3000</td>
+                                        <td>2024-04-16 14:22:55</td>
                                     </tr>
                                     <tr>
-                                        <td>Canon EOS 5D Mark IV</td>
-                                        <td>2024-04-10</td>
+                                        <td>CamX-1000</td>
+                                        <td>2024-04-17 10:11:36</td>
                                     </tr>
                                     <tr>
-                                        <td>Canon EOS 5D Mark IV</td>
-                                        <td>2024-04-10</td>
+                                        <td>CamX-4000</td>
+                                        <td>2024-04-18 09:30:48</td>
                                     </tr>
                                     <tr>
-                                        <td>Canon EOS 5D Mark IV</td>
-                                        <td>2024-04-10</td>
+                                        <td>CamX-5000</td>
+                                        <td>2024-04-18 15:55:21</td>
+                                    </tr>
+                                    <tr>
+                                        <td>CamX-6000</td>
+                                        <td>2024-04-19 11:20:33</td>
+                                    </tr>
+                                    <tr>
+                                        <td>CamX-7000</td>
+                                        <td>2024-04-20 16:44:45</td>
+                                    </tr>
+                                    <tr>
+                                        <td>CamX-8000</td>
+                                        <td>2024-04-21 08:15:57</td>
+                                    </tr>
+                                    <tr>
+                                        <td>CamX-9000</td>
+                                        <td>2024-04-22 13:38:09</td>
+                                    </tr>
+                                    <tr>
+                                        <td>CamX-10000</td>
+                                        <td>2024-04-23 10:09:21</td>
+                                    </tr>
+                                    <tr>
+                                        <td>CamX-11000</td>
+                                        <td>2024-04-24 15:32:33</td>
+                                    </tr>
+                                    <tr>
+                                        <td>CamX-12000</td>
+                                        <td>2024-04-25 12:03:45</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -230,7 +258,60 @@
                 </div>
 
                 <div class="panel-camera">
-                    <div class="panel-camera-container"></div>
+                    <div class="panel-camera-container">
+                        <div class="panel-camera-container-top">
+                            <div class="panel-camera-container-top-title">
+                                <h1>My Cameras</h1>
+                            </div>
+                            <div class="panel-camera-container-top-search">
+                                <input type="text" name="camera-search" placeholder="Search...">
+                            </div>
+                        </div>
+                        <div class="panel-camera-container-table">
+                            <table class="camera-table camera-list-long">
+                                <thead>
+                                    <tr>
+                                        <th>Sensitivity</th>
+                                        <th>Camera</th>
+                                        <th>Last Detected</th>
+                                        <th>30 Day Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>85%</td>
+                                        <td>CamX-2000</td>
+                                        <td>2024-04-15 08:45:12</td>
+                                        <td>Normal</td>
+                                    </tr>
+                                    <tr>
+                                        <td>90%</td>
+                                        <td>CamX-3000</td>
+                                        <td>2024-04-16 14:22:55</td>
+                                        <td>Normal</td>
+                                    </tr>
+                                    <tr>
+                                        <td>75%</td>
+                                        <td>CamX-1000</td>
+                                        <td>2024-04-17 10:11:36</td>
+                                        <td>Normal</td>
+                                    </tr>
+                                    <tr>
+                                        <td>80%</td>
+                                        <td>CamX-4000</td>
+                                        <td>2024-04-18 09:30:48</td>
+                                        <td>Normal</td>
+                                    </tr>
+                                    <tr>
+                                        <td>70%</td>
+                                        <td>CamX-5000</td>
+                                        <td>2024-04-18 15:55:21</td>
+                                        <td>Normal</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="footer">
