--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -195,64 +195,72 @@
                             <p>Latest detection date and time for all cameras</p>
                         </div>
                         <div class="panel-information-detections-table">
-                            <table class="camera-table">
-                                <thead>
-                                    <tr>
-                                        <th>Camera</th>
-                                        <th>Last Detected</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>CamX-2000</td>
-                                        <td>2024-04-15 08:45:12</td>
-                                    </tr>
-                                    <tr>
-                                        <td>CamX-3000</td>
-                                        <td>2024-04-16 14:22:55</td>
-                                    </tr>
-                                    <tr>
-                                        <td>CamX-1000</td>
-                                        <td>2024-04-17 10:11:36</td>
-                                    </tr>
-                                    <tr>
-                                        <td>CamX-4000</td>
-                                        <td>2024-04-18 09:30:48</td>
-                                    </tr>
-                                    <tr>
-                                        <td>CamX-5000</td>
-                                        <td>2024-04-18 15:55:21</td>
-                                    </tr>
-                                    <tr>
-                                        <td>CamX-6000</td>
-                                        <td>2024-04-19 11:20:33</td>
-                                    </tr>
-                                    <tr>
-                                        <td>CamX-7000</td>
-                                        <td>2024-04-20 16:44:45</td>
-                                    </tr>
-                                    <tr>
-                                        <td>CamX-8000</td>
-                                        <td>2024-04-21 08:15:57</td>
-                                    </tr>
-                                    <tr>
-                                        <td>CamX-9000</td>
-                                        <td>2024-04-22 13:38:09</td>
-                                    </tr>
-                                    <tr>
-                                        <td>CamX-10000</td>
-                                        <td>2024-04-23 10:09:21</td>
-                                    </tr>
-                                    <tr>
-                                        <td>CamX-11000</td>
-                                        <td>2024-04-24 15:32:33</td>
-                                    </tr>
-                                    <tr>
-                                        <td>CamX-12000</td>
-                                        <td>2024-04-25 12:03:45</td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <div class="tbl-header"> <!-- Start Table Here -->
+                                <table cellpadding="0" cellspacing="0">
+                                    <thead>
+                                        <tr>
+                                            <th>Camera</th>
+                                            <th>Last Detected</th>
+                                        </tr>
+                                    </thead>
+                                </table>
+                            </div>
+                            <div class="tbl-content">
+                                <table cellpadding="0" cellspacing="0">
+                                    <tbody>
+                                        <!-- Paste your data here -->
+                                        <tr>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                        </tr>
+                                        <tr>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                        </tr>
+                                        <tr>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                        </tr>
+                                        <tr>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                        </tr>
+                                        <tr>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                        </tr>
+                                        <tr>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                        </tr>
+                                        <tr>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                        </tr>
+                                        <tr>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                        </tr>
+                                        <tr>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                        </tr>
+                                        <tr>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                        </tr>
+                                        <tr>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                        </tr>
+                                        <tr>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                        </tr>
+                                        <!-- Repeat this pattern for all rows of your data -->
+                                    </tbody>
+                                </table>
+                            </div> <!-- End Table Here -->
                         </div>
                     </div>
                 </div>
@@ -264,52 +272,78 @@
                                 <h1>My Cameras</h1>
                             </div>
                             <div class="panel-camera-container-top-search">
-                                <input type="text" name="camera-search" placeholder="Search...">
+                                <input type="text" name="camera-search" placeholder="Search camera">
                             </div>
                         </div>
                         <div class="panel-camera-container-table">
-                            <table class="camera-table camera-list-long">
-                                <thead>
-                                    <tr>
-                                        <th>Sensitivity</th>
-                                        <th>Camera</th>
-                                        <th>Last Detected</th>
-                                        <th>30 Day Status</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>85%</td>
-                                        <td>CamX-2000</td>
-                                        <td>2024-04-15 08:45:12</td>
-                                        <td>Normal</td>
-                                    </tr>
-                                    <tr>
-                                        <td>90%</td>
-                                        <td>CamX-3000</td>
-                                        <td>2024-04-16 14:22:55</td>
-                                        <td>Normal</td>
-                                    </tr>
-                                    <tr>
-                                        <td>75%</td>
-                                        <td>CamX-1000</td>
-                                        <td>2024-04-17 10:11:36</td>
-                                        <td>Normal</td>
-                                    </tr>
-                                    <tr>
-                                        <td>80%</td>
-                                        <td>CamX-4000</td>
-                                        <td>2024-04-18 09:30:48</td>
-                                        <td>Normal</td>
-                                    </tr>
-                                    <tr>
-                                        <td>70%</td>
-                                        <td>CamX-5000</td>
-                                        <td>2024-04-18 15:55:21</td>
-                                        <td>Normal</td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <div class="tbl-header"> <!-- Start Table Here -->
+                                <table cellpadding="0" cellspacing="0">
+                                    <thead>
+                                        <tr>
+                                            <th>Sensitivity</th>
+                                            <th>Camera</th>
+                                            <th>Last Detected</th>
+                                            <th>30 Day Status</th>
+                                        </tr>
+                                    </thead>
+                                </table>
+                            </div>
+                            <div class="tbl-content-large">
+                                <table cellpadding="0" cellspacing="0">
+                                    <tbody>
+                                        <!-- Paste your data here -->
+                                        <tr>
+                                            <td>70%</td>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                            <td>N/A</td>
+                                        </tr>
+                                        <tr>
+                                            <td>70%</td>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                            <td>N/A</td>
+                                        </tr>
+                                        <tr>
+                                            <td>70%</td>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                            <td>N/A</td>
+                                        </tr>
+                                        <tr>
+                                            <td>70%</td>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                            <td>N/A</td>
+                                        </tr>
+                                        <tr>
+                                            <td>70%</td>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                            <td>N/A</td>
+                                        </tr>
+                                        <tr>
+                                            <td>70%</td>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                            <td>N/A</td>
+                                        </tr>
+                                        <tr>
+                                            <td>70%</td>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                            <td>N/A</td>
+                                        </tr>
+                                        <tr>
+                                            <td>70%</td>
+                                            <td>LTK-AI</td>
+                                            <td>2024-04-10 16:34:21</td>
+                                            <td>N/A</td>
+                                        </tr>
+                                        <!-- Repeat this pattern for all rows of your data -->
+                                    </tbody>
+                                </table>
+                            </div> <!-- End Table Here -->
                         </div>
                     </div>
                 </div>
