--- a/Pages/index.html
+++ b/Pages/index.html
@@ -476,6 +476,7 @@
 
     <script src="../Scripts/dashboard.js"></script>
     <script src="../Scripts/main.js"></script>
+    <script src="../Scripts/generalSettings.js"></script>
 
 </body>
 
