--- a/Pages/cameras.htm
+++ b/Pages/cameras.htm
@@ -41,46 +41,56 @@
         <div class="main-body">
             <div class="header"></div>
             <div class="panel">
-                <h1>Camera List</h1>
 
-                <div class="search-container">
-                    <input type="text" id="searchInput" onkeyup="searchTable()" placeholder="Search for camera name..">
-                    <button class="new-camera-btn">+ New Camera</button>
+                <div class="table-container">
+                    <div class="table-header">
+                        <h3>My Cameras</h3>
+                        <div class="search-container">
+                            <input type="text" id="searchInput" onkeyup="searchTable()" placeholder="Search for camera name..">
+                            <button class="new-camera-btn">+ New Camera</button>
+                        </div>
+                    </div>
+
+                    <table id="cameraTable">
+                        <tr>
+                            <th>Sensitivity</th>
+                            <th>Camera Name</th>
+                            <th>Last Detected Date</th>
+                            <th>30 days status</th>
+                            <th>Created On Date</th>
+                        </tr>
+                        <tr>
+                            <td>90%</td>
+                            <td>Canon EOS 5D Mark IV</td>
+                            <td>2024-04-10</td>
+                            <td></td>
+                            <td>2024-03-01</td>
+                        </tr>
+                        <tr>
+                            <td>50%</td>
+                            <td>Nikon D850</td>
+                            <td>2024-04-11</td>
+                            <td></td>
+                            <td>2024-02-15</td>
+                        </tr>
+                        <tr>
+                            <td>30%</td>
+                            <td>Sony Alpha A7 III</td>
+                            <td>2024-04-12</td>
+                            <td></td>
+                            <td>2024-01-20</td>
+                        </tr>
+                        <!-- Add more camera rows as needed -->
+                    </table>
                 </div>
 
-                <table id="cameraTable">
-                    <tr>
-                        <th>Sensitivity</th>
-                        <th>Camera Name</th>
-                        <th>Last Detected Date</th>
-                        <th>Created On Date</th>
-                    </tr>
-                    <tr>
-                        <td>High</td>
-                        <td>Canon EOS 5D Mark IV</td>
-                        <td>2024-04-10</td>
-                        <td>2024-03-01</td>
-                    </tr>
-                    <tr>
-                        <td>Medium</td>
-                        <td>Nikon D850</td>
-                        <td>2024-04-11</td>
-                        <td>2024-02-15</td>
-                    </tr>
-                    <tr>
-                        <td>Low</td>
-                        <td>Sony Alpha A7 III</td>
-                        <td>2024-04-12</td>
-                        <td>2024-01-20</td>
-                    </tr>
-                    <!-- Add more camera rows as needed -->
-                </table>
-            </div>
+                <div class="camera-settings">
+                    <!-- <div class="settings-label">Camera Settings</div> -->
+                    <div class="settings-instructions">Click a Camera from the Cameras table to inspect settings.</div>
+                </div>
 
-            <div class="camera-details-container" id="cameraDetailsContainer">
-                <!-- Container for detailed camera information -->
             </div>
-
+            
             <div class="footer"></div>
         </div>
     </div>
@@ -116,12 +126,29 @@
 
         // Function to display detailed information of the clicked camera
         function displayCameraDetails() {
-            var cameraName = this.cells[1].innerText; // Get the camera name from the clicked row
-            // You can fetch more details about the camera using its name or any other identifier
-            // For now, let's just display the camera name in the container
-            var detailsContainer = document.getElementById("cameraDetailsContainer");
-            detailsContainer.innerHTML = "<h2>Detailed Information</h2><p>Camera Name: " + cameraName + "</p>";
+            var cameraDetails = {}; // Object to store camera details
+
+            // Extract camera details from the clicked row
+            cameraDetails.sensitivity = this.cells[0].innerText;
+            cameraDetails.name = this.cells[1].innerText;
+            cameraDetails.lastDetectedDate = this.cells[2].innerText;
+            // Add more details as needed
+
+            // Display camera details in the camera-settings div
+            var settingsContainer = document.querySelector(".camera-settings");
+            settingsContainer.innerHTML = `
+                <div class="camera-details">
+                    <p><strong>Sensitivity:</strong> ${cameraDetails.sensitivity}</p>
+                    <p><strong>Name:</strong> <span id="cameraName">${cameraDetails.name}</span></p>
+                    <p><strong>Last Detected Date:</strong> ${cameraDetails.lastDetectedDate}</p>
+                    <!-- Add more camera details here -->
+                    <label for="newCameraName"><strong>New Camera Name:</strong></label>
+                    <input type="text" id="newCameraName" value="${cameraDetails.name}">
+                    <button onclick="updateCameraName()">Update</button>
+                </div>
+            `;
         }
+
     </script>
 </body>
 
